# Job_Parser_CW4

./: README.md  main.py  pyproject.toml  utils.py
src/: API_work.py  save_info_in_JSON_file.py  working_with_vacancies.py
