[tool.poetry]
name = "job-parser-cw4"
version = "0.1.0"
description = ""
authors = ["Pvl <ivanov.pavel.1307@gmail.com>"]
readme = "README.md"
packages = [{include = "job_parser_cw4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
